updating gatling version  adding one more simulation