@@ -8,34 +8,18 @@
 	<version>1.0.0-SNAPSHOT</version>
 
 	<properties>
-		<gatling.version>2.2.0</gatling.version>
-		<gatling-plugin.version>2.2.0</gatling-plugin.version>
+		<gatling.version>3.3.1</gatling.version>
+		<gatling-plugin.version>3.0.5</gatling-plugin.version>
 		<gatling.skip>false</gatling.skip>
-
-		<gatling.local.home>${project.basedir}/gatling/gatling-charts-highcharts-bundle-${gatling.version}/bin/gatling.sh</gatling.local.home>
-		<gatling.install.script>${project.basedir}/src/test/resources/install-gatling.sh</gatling.install.script>
-		<gatling.root>gatling-charts-highcharts-bundle-${gatling.version}</gatling.root>
-		<gatling.java.opts> -Xms1g -Xmx25g -Xss8M
-			-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M</gatling.java.opts>
-
-		<!-- Fully qualified name of the Gatling simulation and a name describing 
-			the test -->
-		<gatling.simulation>manoj.gatling.sample.SampleSim</gatling.simulation>
+		<scala-maven-plugin.version>4.4.0</scala-maven-plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<gatling.simulation>manoj.gatling.sample.OneMoreSimulation</gatling.simulation>
 		<gatling.test.name>GatlingSimSample</gatling.test.name>
+		<maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
 
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.11.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-reflect</artifactId>
-			<version>2.11.8</version>
-		</dependency>
 		<dependency>
 			<groupId>io.gatling.highcharts</groupId>
 			<artifactId>gatling-charts-highcharts</artifactId>
@@ -57,18 +41,24 @@
 			<artifactId>gatling-app</artifactId>
 			<version>${gatling.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>io.gatling</groupId>
-			<artifactId>gatling-metrics</artifactId>
-			<version>${gatling.version}</version>
-		</dependency>
+		<!-- <dependency> <groupId>io.gatling</groupId> <artifactId>gatling-metrics</artifactId> 
+			<version>${gatling.version}</version> </dependency> -->
 		<dependency>
 			<groupId>io.gatling</groupId>
 			<artifactId>gatling-http</artifactId>
 			<version>${gatling.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.12.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-reflect</artifactId>
+			<version>2.12.10</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<sourceDirectory>src/main/scala</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
@@ -82,15 +72,32 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
+			</plugin>
+			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
-				<version>3.2.1</version>
+				<version>${scala-maven-plugin.version}</version>
 				<executions>
 					<execution>
 						<goals>
 							<goal>compile</goal>
 							<goal>testCompile</goal>
 						</goals>
+						<configuration>
+							<jvmArgs>
+								<jvmArg>-Xss100M</jvmArg>
+							</jvmArgs>
+							<args>
+								<arg>-target:jvm-1.8</arg>
+								<arg>-deprecation</arg>
+								<arg>-feature</arg>
+								<arg>-unchecked</arg>
+								<arg>-language:implicitConversions</arg>
+								<arg>-language:postfixOps</arg>
+							</args>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -100,14 +107,6 @@
 				<groupId>io.gatling</groupId>
 				<artifactId>gatling-maven-plugin</artifactId>
 				<version>${gatling-plugin.version}</version>
-				<executions>
-					<execution>
-						<phase>test</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-					</execution>
-				</executions>
 				<configuration>
 					<dataFolder>src/test/resources/data</dataFolder>
 					<resultsFolder>target/gatling/results</resultsFolder>
